# K-Means-Image-Compression

./: .gitignore  README.md  _git_push.bat
docs/: understanding.md
src/cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp  prebuild.sh
src/cpp/_log/: build_log_init.txt
src/cpp/app/: main.cpp
src/cpp/include/: cli.hpp  image_io.hpp  image_preprocessor.hpp  timing.hpp
src/cpp/include/algorithms/: ICompressor.hpp  KMeansCompressor.hpp
src/cpp/scripts/: compress.sh
src/cpp/src/: cli.cpp  image_io.cpp  image_preprocessor.cpp  timing.cpp
src/cpp/src/algorithms/: KMeansCompressor.cpp
src/cpp/tests/: image_preprocessor_test.cpp
src/elixir/: .gitignore
src/python/: .gitignore  KMeanCluster.ipynb  README.md  cli.py  image_io.py  image_processor.py  lloyd.py  pipeline.py  preprocessing.py  timing.py
src/python/algorithms/: base.py  kmeans.py
src/rust/: .gitignore  Cargo.toml  README.md
src/rust/src/: cli.rs  io.rs  main.rs  pipeline.rs  preprocessing.rs  timing.rs
src/rust/src/algorithms/: kmeans.rs
src/typescript/: README.md  package-lock.json  package.json
src/typescript/src/: cli.ts  index.ts  io.ts  pipeline.ts  preprocessing.ts  timing.ts
src/typescript/src/algorithms/: kmeans.ts
